[package]
name = "demo-index"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.90"
elementary-rs-macros = { path = "../elementary-rs-macros" }
elementary-rs-lib = { path = "../elementary-rs-lib" }
wasm-bindgen-futures = "0.4.40"
console_error_panic_hook = "0.1.7"
serde = { version = "1.0.196", features = ["serde_derive"] }
serde_json = "1.0.113"
gloo-utils = { version = "0.2.0", features = ["serde"] }
