[package]
name = "demo-index"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.90"
elementary-rs-macros = { path = "../elementary-rs-macros" }
elementary-rs-lib = { path = "../elementary-rs-lib" }
wasm-bindgen-futures = "0.4.40"
cfg-if = "1.0.0"
serde = { version = "1.0.196", features = ["serde_derive"] }
serde_json = "1.0.113"
async-trait = "0.1.77"
web-sys = { version = "0.3.67", features = [
  "HtmlElement",
  "Text",
  "Window",
  "Document",
  "Element",
  "Node",
  "console",
  "TreeWalker",
  "Comment",
  "CharacterData",
] }
bevy_ecs = "0.13.0"
bevy = "0.13.0"
