[package]
name = "demo-index"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elementary = { path = "../elementary" }
bevy = { version = "0.13.0", default-features = false }
