[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.3", features = ["tracing"] }
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
tracing-subscriber = "0.3.18"
elementary-rs-macros = { path = "../elementary-rs-macros" }
elementary-rs-lib = { path = "../elementary-rs-lib" }
proc-macro2 = "1.0.78"
quote = "1.0.35"
