[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.3", features = ["tracing", "macros"] }
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
tracing-subscriber = "0.3.18"
demo-index = { path = "../demo-index" }
elementary-rs-lib = { path = "../elementary-rs-lib" }
proc-macro2 = "1.0.78"
quote = "1.0.35"
wasm-bindgen = "0.2.90"
wasm-bindgen-futures = "0.4.40"
tower-http = { version = "0.5.1", features = ["fs"] }
elementary-rs-macros = { version = "0.1.0", path = "../elementary-rs-macros" }
axum-macros = "0.4.1"
bevy = "0.13.0"
