[package]
name = "elementary-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.76"
quote = "1.0.35"
syn = "2.0.48"
thiserror = "1.0.56"
darling = "0.20.5"
tap = "1.0.1"
