[package]
name = "elementary-rs-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.5"
async-trait = "0.1.77"
console_error_panic_hook = "0.1.7"
cfg-if = "1.0.0"
getrandom = { version = "0.2.12", features = ["js"] }
gloo-utils = { version = "0.2.0", features = ["serde"] }
nanoid = "0.4.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
uuid = { version = "1.7.0", features = ["v4", "fast-rng", "js"] }
web-sys = { version = "0.3.67", features = [
  "HtmlElement",
  "Text",
  "Window",
  "Document",
  "Element",
  "Node",
  "console",
  "TreeWalker",
  "Comment",
  "CharacterData",
  "ShadowRoot",
] }
wasm-bindgen = "0.2.91"
bevy_ecs = "0.13.0"
bevy = { version = "0.13.0", default-features = false }
either = "1.10.0"
thiserror = "1.0.57"
