[package]
name = "elementary-rs-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.7.0", features = ["v4", "fast-rng", "js"] }
bevy_ecs = "0.13.0"
bevy = { version = "0.13.0", default-features = false }
either = "1.10.0"
thiserror = "1.0.57"
