[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.3", features = ["tracing", "macros"] }
tokio = { version = "1.35.1", features = ["full"] }
tracing-subscriber = "0.3.18"
best = { path = "../best" }
tower-http = { version = "0.5.1", features = ["fs"] }
axum-macros = "0.4.1"
bevy = { version = "0.13.0", default-features = false }
