[package]
name = "omni-rs-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.76"
quote = "1.0.35"
scraper = "0.18.1"
syn = "2.0.48"
thiserror = "1.0.56"
