[package]
name = "omni-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.3", features = ["tracing"] }
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
tracing-subscriber = "0.3.18"
omni-rs-macros = { path = "../omni-rs-macros" }
web-sys = "0.3.67"
